Fix : Listview in v2 having wrong spacing and padding, star icon sticking to left of screen

--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -100,7 +100,7 @@ a {
     margin:20px;
 }
 .icon {
-	padding: 6px 2px 2px 0px;
+	padding: 10px;
 	width: fit-content;
 }
 
